--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-	"name": "applause-for-hawes",
-	"homepage": "https://applauseforhawes.com/",
+	"name": "we-didnt-know-the-lyrics",
+	"homepage": "https://shawnphoffman.com/we-didnt-know-the-lyrics/",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@giphy/js-fetch-api": "^4.1.1",
-		"@giphy/react-components": "^4.0.1",
 		"@panelbear/panelbear-js": "^1.2.0",
 		"@react-firebase/auth": "^0.2.10",
 		"@react-firebase/database": "^0.3.11",
@@ -16,12 +14,8 @@
 		"@testing-library/user-event": "^12.1.10",
 		"firebase": "^8.10.0",
 		"highlightable": "^1.0.7",
-		"lodash.get": "^4.4.2",
-		"lodash.set": "^4.3.2",
 		"react": "^0.0.0-experimental-bd070eb2c",
-		"react-audio-player": "^0.17.0",
 		"react-dom": "^0.0.0-experimental-bd070eb2c",
-		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
 		"web-vitals": "^0.2.4",
 		"xml-js": "^1.6.11"
